Bug 50343 - [4.7 Regression] FAIL: gfortran.dg/graphite/id-22.f
Summary: [4.7 Regression] FAIL: gfortran.dg/graphite/id-22.f
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Richard Biener
URL:
Keywords:
: 50411 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-09 14:38 UTC by H.J. Lu
Modified: 2011-09-15 13:37 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2011-09-10 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2011-09-09 14:38:41 UTC
On Linux/x86, revision 178728 gave

FAIL: gfortran.dg/graphite/id-22.f  -O  (internal compiler error)
FAIL: gfortran.dg/graphite/id-22.f  -O  (test for excess errors)

Revision 178713 is OK.
Comment 1 H.J. Lu 2011-09-09 14:51:02 UTC
Revision 178726 is OK.
Comment 2 H.J. Lu 2011-09-09 14:53:28 UTC
spawn -ignore SIGHUP /export/gnu/import/svn/gcc-test-intel64corei7/bld/gcc/testsuite/gfortran/../../gfortran -B/export/gnu/import/svn/gcc-test-intel64corei7/bld/gcc/testsuite/gfortran/../../ -B/export/gnu/import/svn/gcc-test-intel64corei7/bld/x86_64-unknown-linux-gnu/32/libgfortran/ /export/gnu/import/svn/gcc-test-intel64corei7/src-trunk/gcc/testsuite/gfortran.dg/graphite/id-22.f -O -O3 -ffast-math -S -m32 -o id-22.s^M
/export/gnu/import/svn/gcc-test-intel64corei7/src-trunk/gcc/testsuite/gfortran.dg/graphite/id-22.f: In function 'main':^M
/export/gnu/import/svn/gcc-test-intel64corei7/src-trunk/gcc/testsuite/gfortran.dg/graphite/id-22.f:10:0: internal compiler error: tree check: expected ssa_name, have real_cst in vect_recog_dot_prod_pattern, at tree-vect-patterns.c:261^M
Please submit a full bug report,^M
with preprocessed source if appropriate.^M
See <http://gcc.gnu.org/bugs.html> for instructions.^M
compiler exited with status 1
Comment 3 H.J. Lu 2011-09-09 22:05:16 UTC
The same error on 252.eon in SPEC CPU 2K:

g++ -c -o ggPlane.o   -DSPEC_CPU2000_LP64 -DHAS_ERRLIST    -I. -DNDEBUG     -O3 -funroll-loops -ffast-math -fwhole-program -flto=jobserver -fuse-linker-plugin  ggPlane.cc
ggPlane.cc: In member function 'ggPlane::initialize(ggTrain<ggPoint3> const&)':
ggPlane.cc:47:6: internal compiler error: tree check: expected ssa_name, have real_cst in vect_recog_dot_prod_pattern, at tree-vect-patterns.c:261
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
specmake[3]: *** [ggPlane.o] Error 1
Comment 4 H.J. Lu 2011-09-09 22:40:46 UTC
It is caused by revision 178728:

http://gcc.gnu.org/ml/gcc-cvs/2011-09/msg00343.html
Comment 5 Dominique d'Humieres 2011-09-10 13:53:08 UTC
Confirmed on x86_64-apple-darwin10, backtrace is

#0  vect_recog_dot_prod_pattern (stmts=<value optimized out>, type_in=<value optimized out>, type_out=<value optimized out>)
    at ../../work/gcc/tree-vect-patterns.c:261
#1  0x0000000100961623 in vect_pattern_recog (loop_vinfo=<value optimized out>) at ../../work/gcc/tree-vect-patterns.c:1295
#2  0x000000010098b997 in vect_analyze_loop (loop=<value optimized out>) at ../../work/gcc/tree-vect-loop.c:1500
#3  0x000000010099bf78 in vectorize_loops () at ../../work/gcc/tree-vectorizer.c:203
#4  0x00000001006f6bec in execute_one_pass (pass=0x100de7360) at ../../work/gcc/passes.c:2063
#5  0x00000001006f6fad in execute_pass_list (pass=0x100de7360) at ../../work/gcc/passes.c:2118
#6  0x00000001006f6fbf in execute_pass_list (pass=0x100de7540) at ../../work/gcc/passes.c:2119
#7  0x00000001006f6fbf in execute_pass_list (pass=0x100de67c0) at ../../work/gcc/passes.c:2119
#8  0x000000010083d848 in tree_rest_of_compilation (fndecl=<value optimized out>) at ../../work/gcc/tree-optimize.c:420
#9  0x00000001003ff24a in cgraph_expand_function (node=<value optimized out>) at ../../work/gcc/cgraphunit.c:1797
#10 0x00000001004010da in cgraph_optimize () at ../../work/gcc/cgraphunit.c:1856
#11 0x00000001004017da in cgraph_finalize_compilation_unit () at ../../work/gcc/cgraphunit.c:1310
#12 0x00000001006880ed in write_global_declarations () at ../../work/gcc/langhooks.c:303
#13 0x00000001007b656a in toplev_main (argc=4, argv=0x7fff5fbfd9d0) at ../../work/gcc/toplev.c:564
#14 0x0000000100001004 in start ()
Comment 6 H.J. Lu 2011-09-10 17:29:45 UTC
With SPEC CPU 2006, I got

456.hmmer:

histogram.c: In function 'Lawless416':
histogram.c:1028:1: internal compiler error: tree check: expected ssa_name, have real_cst in vect_recog_dot_prod_pattern, at tree-vect-patterns.c:261
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
specmake[3]: *** [histogram.o] Error 1

435.gromacs:

princ.c: In function 'calc_xcm':
princ.c:189:6: internal compiler error: tree check: expected ssa_name, have real_cst in vect_recog_dot_prod_pattern, at tree-vect-patterns.c:261
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
specmake[3]: *** [princ.o] Error 1
Comment 7 Richard Biener 2011-09-12 05:48:51 UTC
Mine.
Comment 8 Richard Biener 2011-09-12 06:01:19 UTC
Author: rguenth
Date: Mon Sep 12 06:01:15 2011
New Revision: 178775

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=178775
Log:
2011-09-12  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/50343
	* tree-vect-patterns.c (vect_recog_dot_prod_pattern): Check
	that the reduction is over an SSA name before checking its
	definition.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-vect-patterns.c
Comment 9 Richard Biener 2011-09-12 06:01:36 UTC
Fixed.
Comment 10 Joost VandeVondele 2011-09-15 13:37:54 UTC
*** Bug 50411 has been marked as a duplicate of this bug. ***