2011-09-12  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/50343
	* tree-vect-patterns.c (vect_recog_dot_prod_pattern): Check
	that the reduction is over an SSA name before checking its
	definition.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@178775 138bc75d-0d04-0410-961f-82ee72b054a4